--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myDiary || Your personal true story</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
@@ -16,37 +18,47 @@
             <a href="./index.html">
                 <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
             </a>
-            <form action="./profile.html" class="auth-inner">
+            <form class="auth-inner">
                 <div class="auth-title">
                     <h4>Sign Up</h4>
                     <p>or
                         <a href="./login.html">sign in to your account.</a>.</p>
                 </div>
+                <div class="display-payload"></div>
                 <div class="form-group">
-                    <input class="form-control" type="text" id="email" placeholder="Email">
+                    <input class="form-control" type="text" name="email" placeholder="Email">
+                    <label for="email"></label>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="text" id="fname" placeholder="First Name">
+                        <input class="form-control" type="text" name="fname" placeholder="First Name">
+                        <label for="fname"></label>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="lname" placeholder="Last Name">
+                        <input class="form-control" type="text" name="lname" placeholder="Last Name">
+                        <label for="lname"></label>
                     </div>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="password" id="password" placeholder="Password">
+                        <input class="form-control" type="password" name="password" placeholder="Password">
+                        <label for="password"></label>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="confirmpassword" placeholder="Password Confirm">
+                        <input class="form-control" type="password" name="confirmPassword" placeholder="Password Confirm">
+                        <label for="confirmPassword"></label>
                     </div>
                 </div>
-                <button>Create account</button>
+                <button>
+                    <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+                    Create account
+                </button>
             </form>
         </div>
     </div>
+    <script src="./CLIENT/auth.js"></script>
 </body>
 
 </html>
