--- a/create.html
+++ b/create.html
@@ -58,39 +58,37 @@
             <div>
                 <h1 class="big-title">Add/Edit Entry</h1>
             </div>
-            <div class="wrapper editprofile">
-                <form class="form-wrapper">
+            <form id="create" class="wrapper editprofile">
+                <div class="form-wrapper">
+                    <div class="display-payload"></div>
                     <div class="form-group-wrap">
                         <div class="form-group">
                             <div class="title-box">
-                                <input class="form-control" type="text" id="title" placeholder="Enter title">
+                                <input autocomplete="off" class="form-control" type="text" name="title" placeholder="Enter title">
+                                <label></label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <select name="category" id="">
-                                <option>Categories</option>
-                                <option value="life-style">Life-style</option>
-                                <option value="my love life">My love life</option>
+                            <select name="category" id="category">
                             </select>
-                            <!-- <div class="new-category">
-                                <a class="modal-open" href="#">Add new category</a>
-                            </div> -->
                         </div>
                     </div>
                     <div class="small-spacing"></div>
                     <div class="form-group about-cont">
-                        <textarea class="form-control" name="" id="" placeholder="Description"></textarea>
+                        <textarea class="form-control" name="description" placeholder="Description"></textarea>
+                        <label></label>
                     </div>
-                </form>
-            </div>
-            <div class="a-right r-btn">
-                <a href="./editprofile.html">
-                    <button class="cta-btn">Save</button>
-                </a>
-            </div>
+                </div>
+                <div class="a-right r-btn">
+                    <button class="cta-btn">
+                        <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+                        Save
+                    </button>
+                </div>
+            </form>
         </div>
     </main>
-    <script src="./js/custom.js"></script>
+    <script src="./CLIENT/create.js"></script>
 </body>
 
 </html>
