--- a/signup.html
+++ b/signup.html
@@ -26,28 +26,28 @@
                 </div>
                 <div class="display-payload"></div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="email" placeholder="Email">
+                    <input autocomplete="off" class="form-control" type="text" name="email" placeholder="Email">
                     <label for="email"></label>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="fname" placeholder="First Name">
+                        <input autocomplete="off" class="form-control" type="text" name="fname" placeholder="First Name">
                         <label for="fname"></label>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="lname" placeholder="Last Name">
+                        <input autocomplete="off" class="form-control" type="text" name="lname" placeholder="Last Name">
                         <label for="lname"></label>
                     </div>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="Password">
+                        <input autocomplete="off" class="form-control" type="password" name="password" placeholder="Password">
                         <label for="password"></label>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" name="confirmPassword" placeholder="Password Confirm">
+                        <input autocomplete="off" class="form-control" type="password" name="confirmPassword" placeholder="Password Confirm">
                         <label for="confirmPassword"></label>
                     </div>
                 </div>
